--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL="mongodb+srv://Cyber4s:ilovecode@cluster0.pluyv.mongodb.net/parking?retryWrites=true&w=majority"
+SECRET_KEY="supersecret_dont_share"
