--- a/package.json
+++ b/package.json
@@ -32,5 +32,14 @@
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.5"
   }
 }
